@startuml data_miw
' Database Sequence Diagram for data_miw (Full Details)

entity "data_paket" as data_paket {
  *pak_id : int (PK)
  jenis_paket : enum('Haji','Umroh')
  currency : enum('IDR','USD')
  program_pilihan : varchar(255)
  tanggal_keberangkatan : date
  base_price_quad : decimal(15,2)
  base_price_triple : decimal(15,2)
  base_price_double : decimal(15,2)
  hotel_medinah : varchar(100)
  hotel_makkah : varchar(100)
  additional_hotels : varchar(100)
  hotel_medinah_rooms : text
  hotel_makkah_rooms : text
  additional_hotels_rooms : text
  room_numbers : text
  hcn : varchar(50)
  created_at : timestamp
  updated_at : timestamp
}

entity "data_jamaah" as data_jamaah {
  *nik : varchar(16) (PK)
  nama : varchar(100)
  tempat_lahir : varchar(50)
  tanggal_lahir : date
  jenis_kelamin : enum('Laki-laki','Perempuan')
  alamat : text
  kode_pos : varchar(10)
  email : varchar(50)
  no_telp : varchar(20)
  tinggi_badan : int
  berat_badan : int
  nama_ayah : varchar(100)
  umur : int
  kewarganegaraan : enum('Indonesia','Asing')
  desa_kelurahan : varchar(100)
  kecamatan : varchar(100)
  kabupaten_kota : varchar(100)
  provinsi : varchar(100)
  pendidikan : enum('SD','SLTP','SLTA','D1/D2/D3/SM','S1','S2','S3')
  pekerjaan : enum('Pegawai Negeri Sipil','TNI/POLRI','Dagang','Tani/Nelayan','Swasta','Ibu Rumah Tangga','Pelajar/Mahasiswa','BUMN/BUMD','Pensiunan')
  golongan_darah : enum('A','B','AB','O')
  status_perkawinan : enum('Belum Menikah','Menikah','Janda/Duda')
  ciri_rambut : varchar(50)
  ciri_alis : varchar(50)
  ciri_hidung : varchar(50)
  ciri_muka : varchar(50)
  emergency_nama : varchar(255)
  emergency_hp : varchar(20)
  nama_mahram : varchar(100)
  hubungan_mahram : enum('Orang Tua','Anak','Suami/Istri','Mertua','Saudara Kandung')
  nomor_mahram : varchar(20)
  nama_paspor : varchar(255)
  no_paspor : varchar(50)
  tempat_pembuatan_paspor : varchar(255)
  tanggal_pengeluaran_paspor : date
  tanggal_habis_berlaku : date
  nama_sertifikat_covid : varchar(255)
  jenis_vaksin_1 : varchar(100)
  jenis_vaksin_2 : varchar(100)
  jenis_vaksin_3 : varchar(100)
  tanggal_vaksin_1 : date
  tanggal_vaksin_2 : date
  tanggal_vaksin_3 : date
  pengalaman_haji : enum('Pernah','Belum')
  marketing_nama : varchar(100)
  marketing_hp : varchar(20)
  marketing_type : varchar(20)
  kk_path : varchar(255)
  ktp_path : varchar(255)
  paspor_path : varchar(255)
  transfer_account_name : varchar(100)
  payment_time : time
  payment_date : date
  payment_type : enum('DP','Pelunasan')
  payment_method : enum('BSI','BNI','Mandiri')
  payment_status : enum('pending','verified','rejected')
  payment_path : varchar(255)
  payment_total : decimal(15,2)
  payment_remaining : decimal(15,2)
  payment_verified_at : timestamp
  payment_rejected_at : datetime
  payment_verified_by : varchar(100)
  bk_kuning : enum('Yes','No')
  foto : enum('Yes','No')
  fc_ktp : enum('Yes','No')
  fc_ijazah : enum('Yes','No')
  fc_kk : enum('Yes','No')
  fc_bk_nikah : enum('Yes','No')
  fc_akta_lahir : enum('Yes','No')
  created_at : timestamp
  updated_at : timestamp
  pak_id : int (FK)
  type_room_pilihan : enum('Quad','Triple','Double')
  request_khusus : text
}

entity "data_invoice" as data_invoice {
  *invoice_id : varchar(8) (PK)
  pak_id : int (FK)
  nik : varchar(16) (FK)
  nama : varchar(100)
  alamat : text
  no_telp : varchar(20)
  keterangan : text
  payment_type : enum('DP','Pelunasan')
  program_pilihan : varchar(255)
  type_room_pilihan : enum('Quad','Triple','Double')
  harga_paket : decimal(15,2)
  payment_amount : decimal(15,2)
  diskon : int
  total_uang_masuk : decimal(15,2)
  sisa_pembayaran : decimal(15,2)
}

data_paket ||--o{ data_jamaah : "pak_id"
data_paket ||--o{ data_invoice : "pak_id"
data_jamaah ||--o{ data_invoice : "nik"
@enduml
